--- a/settings.kv
+++ b/settings.kv
@@ -49,13 +49,25 @@ ScreenManager:
             id: textbox
             hint_text: "Enter group name"
             required: True
-            helper_text: "Enter group"
+            helper_text: "Enter value for processing student activity data"
+            helper_text_mode: "on_error"
+            icon_right: "android"
+            pos_hint: {'center_x': .5, 'center_y': .6}
+            size_hint_x: None
+            width: 300
+            max_text_length: 10
+
+        MDTextField:
+            id: textbox_week_number
+            hint_text: "Enter week number"
+            required: False
+            helper_text: "Enter value for processing student activity data"
             helper_text_mode: "on_error"
             icon_right: "android"
             pos_hint: {'center_x': .5, 'center_y': .5}
             size_hint_x: None
             width: 300
-            max_text_length: 10
+            max_text_length: 2
 
         MDRectangleFlatButton:
             text: "OK"
