--- a/main.kv
+++ b/main.kv
@@ -8,8 +8,10 @@ ScreenManager:
             text: "Login"
             font_size: 28
             halign: 'center'
-            size_hint_y: None
+            adaptive_size: True
             pos_hint: {"center_x": .5, "center_y": .9}
+            #theme_text_color: "Custom"
+            #text_color: 0, 0, 1, 1
 
         MDTextFieldRound:
             id: user
@@ -82,6 +84,8 @@ ScreenManager:
             text: 'Please provide images'
             halign: 'center'
             pos_hint: {"center_x": .5, "center_y": .6}
+            #theme_text_color: "Custom"
+            #text_color: 0, 0, 1, 1
 
         MDFloatLayout:
             MDRoundFlatIconButton:
