--- a/main.kv
+++ b/main.kv
@@ -3,44 +3,79 @@ ScreenManager:
     Screen:
         name: 'login'
 
-        MDLabel:
-            id: welcome_label
-            text: "Login"
-            font_size: 28
-            halign: 'center'
-            adaptive_size: True
-            pos_hint: {"center_x": .5, "center_y": .9}
-
-        MDTextFieldRound:
-            id: user
-            hint_text: "Username"
-            icon_right: "account"
-            size_hint_x: None
-            width: 200
-            font_size: 18
-            pos_hint: {"center_x": .5, "center_y": .6}
-
-        MDTextFieldRound:
-            id: password
-            hint_text: "Password"
-            icon_right: "key"
-            size_hint_x: None
-            width: 200
-            font_size: 18
-            pos_hint: {"center_x": .5, "center_y": .5}
-            password: True
-
-        MDRoundFlatButton:
-            text: "Ok"
-            font_size: 12
-            pos_hint: {"center_x": .5, "center_y": .3}
-            on_press: app.start()
-
-        MDRoundFlatButton:
-            text: "Close"
-            font_size: 12
-            pos_hint: {"center_x": .5, "center_y": .2}
-            on_press: app.stop()
+        MDFloatLayout:
+            mg_bg_color: 1, 1, 1, 1
+            Image:
+                source: "Login.png"
+                pos_hint: {"y": .25}
+            MDLabel:
+                text: "Log In"
+                pos_hint: {"center_x": .5, "center_y": .5}
+                halign: "center"
+            MDFloatLayout:
+                size_hint_x: .9
+                size_hint_y: .1
+                pos_hint: {"center_x": .5, "center_y": .4}
+                canvas:
+                    Color:
+                        rgb: (245/255, 245/255, 245/255, 1)
+                    RoundedRectangle:
+                        size: self.size
+                        pos: self.pos
+                        radius: [25]
+                MDTextField:
+                    id: user
+                    hint_text: "Username"
+                    size_hint_x: 0.9
+                    size_hint_y: None
+                    pos_hint: {"center_x": .5, "center_y": .5}
+                    height: self.minimum_height
+                    multiline: False
+                    cursor_width: "2sp"
+                    background_color: 0, 0, 0, 0
+                    padding: 15
+            MDFloatLayout:
+                size_hint_x: .9
+                size_hint_y: .1
+                pos_hint: {"center_x": .5, "center_y": .28}
+                canvas:
+                    Color:
+                        rgb: (245/255, 245/255, 245/255, 1)
+                    RoundedRectangle:
+                        size: self.size
+                        pos: self.pos
+                        radius: [25]
+                MDTextField:
+                    id: password
+                    hint_text: "Password"
+                    password: True
+                    size_hint_x: 0.9
+                    size_hint_y: None
+                    pos_hint: {"center_x": .5, "center_y": .5}
+                    height: self.minimum_height
+                    multiline: False
+                    cursor_width: "2sp"
+                    background_color: 0, 0, 0, 0
+                    padding: 15
+            MDTextButton:
+                text: "Forgot your password?"
+                text_color: 1, 1, 1, 1
+                pos_hint: {"center_x": .5, "center_y": .2}
+                on_press: print()
+            MDRoundFlatButton:
+                text: "LOGIN"
+                size_hint_x: .5
+                size_hint_y: None
+                pos_hint: {"center_x": .5, "center_y": .12}
+                background_color: 1, 1, 1, 1
+                on_press: app.start()
+            MDRoundFlatButton:
+                text: "CLOSE"
+                size_hint_x: .5
+                size_hint_y: None
+                pos_hint: {"center_x": .5, "center_y": .05}
+                background_color: 1, 1, 1, 1
+                on_press: app.stop()
 
     Screen:
         name: 'menu'
@@ -72,8 +107,14 @@ ScreenManager:
         MDRectangleFlatButton:
             text: "OK"
             icon: "folder"
-            pos_hint: {'center_x':.5,'center_y':.4}
+            pos_hint: {'center_x':.4,'center_y':.4}
             on_press: app.show_data()
+
+        MDRectangleFlatButton:
+            text: "Back"
+            icon: "folder"
+            pos_hint: {'center_x':.6,'center_y':.4}
+            on_press: app.button_screen_back_to_login()
 
     Screen:
         name: 'processing'
