--- a/main.kv
+++ b/main.kv
@@ -6,8 +6,7 @@ ScreenManager:
         MDFloatLayout:
             Image:
                 source: "Login.png"
-                pos_hint_x: None
-                pos_hint_y: 0
+                pos_hint: {"x": 0, "y": .3}
             MDLabel:
                 text: "Log In"
                 pos_hint: {"center_x": .5, "center_y": .6}
