--- a/main.kv
+++ b/main.kv
@@ -7,7 +7,7 @@ ScreenManager:
             md_bg_color: app.theme_cls.bg_light
 
             Image:
-                source: "Login.gif"
+                source: "login.gif"
                 anim_delay: 1/24
                 pos_hint: {"x": 0, "y": 0.23}
 
