--- a/main.kv
+++ b/main.kv
@@ -25,6 +25,13 @@ ScreenManager:
 
                 MDTextField:
                     id: user
+                    #hint_text_color_normal: 0,0,0,1
+                    #hint_text_color_focus: 0,0,0,1
+                    #line_color_normal: 0,0,0,1
+                    #line_color_focus: 0,0,0,1
+                    #text_color_normal: 0,0,0,1
+                    text_color_focus: 0,0,0,1
+                    color_mode: "custom"
                     mode: "fill"
                     hint_text: "Username"
                     size_hint_x: 1
@@ -41,6 +48,13 @@ ScreenManager:
 
                 MDTextField:
                     id: password
+                    #hint_text_color_normal: 0,0,0,1
+                    #hint_text_color_focus: 0,0,0,1
+                    #line_color_normal: 0,0,0,1
+                    #line_color_focus: 0,0,0,1
+                    #text_color_normal: 0,0,0,1
+                    text_color_focus: 0,0,0,1
+                    color_mode: "custom"
                     mode: "fill"
                     hint_text: "Password"
                     password: True
