[1.0] Code and design updates

--- a/main.kv
+++ b/main.kv
@@ -170,6 +170,7 @@ ScreenManager:
 
     MDScreen:
         name: 'processing'
+        md_bg_color: app.theme_cls.bg_light
 
         MDLabel:
             font_style: "Subtitle1"
@@ -219,6 +220,8 @@ ScreenManager:
     MDScreen:
         id: data_scr
         name: 'table'
+        md_bg_color: app.theme_cls.bg_light
 
     MDScreen:
         name: 'check'
+        md_bg_color: app.theme_cls.bg_light
